Fixed all styling issues in CSS, including z-index

--- a/app/assets/stylesheets/box.css
+++ b/app/assets/stylesheets/box.css
@@ -1,120 +1,93 @@
-h1 {
-  font-family:helvetica neue,helvetica,arial,sans-serif;
-  font-size:35px;
-  font-weight:200;
-  color:#a9a9a9;
-  margin:50px auto 20px auto;
-}
 
-h5 {
-  font-family:helvetica neue,helvetica,arial,sans-serif;
-  font-size:15px;
-  font-weight:200;
-  color:#a9a9a9;
-}
+/* General Body Styling*/
+  h1 {
+    font-family:helvetica neue,helvetica,arial,sans-serif;
+    font-size:35px;
+    font-weight:200;
+    color:#a9a9a9;
+    margin:50px auto 20px auto;
+  }
 
-body {
-	background-color: #ecf0f1;
-	margin: 20px;
-	font-family: Arial, Tahoma;
-	font-size: 20px;
-	color: #666666;
-	text-align: center;
-}
-p { color: #ffffff;  }
+  h5 {
+    font-family:helvetica neue,helvetica,arial,sans-serif;
+    font-size:15px;
+    font-weight:200;
+    color:#a9a9a9;
+  }
+
+  body {
+  	background-color: #ecf0f1;
+  	margin: 20px;
+  	font-family: Arial, Tahoma;
+  	font-size: 20px;
+  	color: #666666;
+  	text-align: center;
+  }
+
+  p { color: #ffffff; }
 
 
 /* Column Grids */
   .col_third {
     width: 32%;
-  	position: relative;
-  	display:inline;
-  	display: inline-block;
   	float: left;
   	margin-right: 2%;
   }
 
+  .end { margin-right: 0 !important; }
+
+
 /* Flip Panel */
-  .wrapper{ width: 980px; margin: 0 auto;  background-color: #bdd3de; hoverflow: hidden;}
+  .wrapper{ width: 1100px; margin: 0 auto;  background-color: #bdd3de; hoverflow: hidden;}
 
   .panel {
   	margin: 0 auto;
-  	height: 130px;
+  	height: 250px;
   	position: relative;
-  	-webkit-perspective: 600px;
-  	-moz-perspective: 600px;
-  }
-
-  .panel .front,
-  .panel .back {
-  	text-align: center;
+  	perspective: 600px;
   }
 
   .panel .front {
-  	height: inherit;
   	position: absolute;
-  	top: 0;
-  	z-index: 900;
-  	text-align: center;
-  	-webkit-transform: rotateX(0deg) rotateY(0deg);
-  	   -moz-transform: rotateX(0deg) rotateY(0deg);
-  	-webkit-transform-style: preserve-3d;
-  	   -moz-transform-style: preserve-3d;
-  	-webkit-backface-visibility: hidden;
-  	   -moz-backface-visibility: hidden;
-  	-webkit-transition: all .4s ease-in-out;
-  	   -moz-transition: all .4s ease-in-out;
-  		-ms-transition: all .4s ease-in-out;
-  		 -o-transition: all .4s ease-in-out;
-  			transition: all .4s ease-in-out;
+  	transform: rotateX(0deg) rotateY(0deg);
+  	backface-visibility: hidden;
+  	transition: all .5s ease-in-out;
   }
 
   .panel .back {
-  	height: inherit;
   	position: absolute;
-  	top: 0;
-  	z-index: 1000;
-  	-webkit-transform: rotateY(-180deg);
-  	   -moz-transform: rotateY(-180deg);
-  	-webkit-transform-style: preserve-3d;
-  	   -moz-transform-style: preserve-3d;
-  	-webkit-backface-visibility: hidden;
-  	   -moz-backface-visibility: hidden;
-  	-webkit-transition: all .4s ease-in-out;
-  	   -moz-transition: all .4s ease-in-out;
-  		-ms-transition: all .4s ease-in-out;
-  		 -o-transition: all .4s ease-in-out;
-  			transition: all .4s ease-in-out;
+  	transform: rotateY(-180deg);
+  	backface-visibility: hidden;
+  	transition: all .5s ease-in-out;
   }
   .panel.flip .front {
-  	z-index: 900;
-  	-webkit-transform: rotateY(180deg);
-  	-moz-transform: rotateY(180deg);
+  	transform: rotateY(180deg);
   }
   .panel.flip .back {
-  	z-index: 1000;
-  	-webkit-transform: rotateX(0deg) rotateY(0deg);
-  	-moz-transform: rotateX(0deg) rotateY(0deg);
+  	transform: rotateX(0deg) rotateY(0deg);
+  }
+
+  .panel.flip{
+    z-index:1;
   }
 
 /* Box Styling */
-.box1{
-	background-color: #14bcc8;
-	width: 250px;
-	height: 150px;
-	margin: 0 auto;
-	padding: 20px;
-	border-radius: 10px;
-	-moz-border-radius: 10px;
-	-webkit-border-radius: 10px;
-}
+  .box1{
+  	background-color: #14bcc8;
+  	width: 250px;
+  	height: 150px;
+  	margin: 0 auto;
+  	padding: 20px;
+  	border-radius: 10px;
+  	-moz-border-radius: 10px;
+  	-webkit-border-radius: 10px;
+  }
 
-.box2{
-	background-color: #ff7e70;
-	width: 250px;
-	margin: 0 auto;
-	padding: 20px;
-	border-radius: 10px;
-	-moz-border-radius: 10px;
-	-webkit-border-radius: 10px;
-}
+  .box2{
+  	background-color: #ff7e70;
+  	width: 250px;
+  	margin: 0 auto;
+  	padding: 20px;
+  	-moz-border-radius: 10px;
+  	-webkit-border-radius: 10px;
+  }
